--- a/app/cadastro_candidato.html
+++ b/app/cadastro_candidato.html
@@ -7,8 +7,8 @@
 
 <table class="table">
     <tr><th>Nome do candidato</th></tr>
-    {% for candidatos in vestibulares %}
-    <tr><td>{{ candidatos.nome }}</td></tr>
+    {% for candidato in vestibulares %}
+    <tr><td>{{ candidato.nome }}</td></tr>
     {% endfor %}
 </table>
 {% endblock %}
